# librespot-cpp

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  Kconfig  README.md  flake.nix
.github/workflows/: clang-format.yml
cspot/: CMakeLists.txt  README.md
cspot/bell/: CMakeLists.txt
cspot/bell/main/audio-sinks/esp/: BufferedAudioSink.cpp  PCM5102AudioSink.cpp  PlainI2SAudioSink.cpp
cspot/bell/main/audio-sinks/include/: AudioSink.h
cspot/bell/main/audio-sinks/include/esp/: BufferedAudioSink.h  PCM5102AudioSink.h  PlainI2SAudioSink.h
cspot/bell/main/io/: HTTPClient.cpp  SimpleHTTPServer.cpp  TLSSocket.cpp
cspot/bell/main/io/include/: HTTPClient.h  SimpleHTTPServer.h  URLParser.h
cspot/bell/main/platform/apple/: X509Bundle.cpp
cspot/bell/main/platform/esp/: X509Bundle.cpp
cspot/bell/main/utilities/include/: Crypto.h  psa_init.h
cspot/include/: CDNAudioFile.h  ConnectStateHandler.h  ConnectStateModel.h  ContextResolver.h  DealerClient.h  Decoder.h  HttpRetry.h  Mp3TrackDecoder.h  PlaybackController.h  PlaybackEvent.h  PlayerCommandHandler.h  PlayerStateModel.h  SpotifyConnectReceiver.h  TrackPlayer.h  TrackQueue.h  TrackReference.h
cspot/protobuf/: clienttoken.options  clienttoken.proto  connectstate.options  connectstate.proto  login5.options  metadata.proto
cspot/src/: AccessKeyFetcher.cpp  AuthChallenges.cpp  CDNAudioFile.cpp  ConnectStateHandler.cpp  ConnectStateHandlerCommands.cpp  ConnectStateModel.cpp  DealerClient.cpp  Login5Client.cpp  MercurySession.cpp  PlaybackController.cpp  PlayerCommandHandler.cpp  PlayerStateModel.cpp  Session.cpp  SpotifyConnectReceiver.cpp  TrackLoader.cpp  TrackPlayer.cpp  TrackQueue.cpp  TrackReference.cpp  VorbisTrackDecoder.cpp
docs/: cdn_audio_cache.md  cspot_bell_estructura.md  dealer_websocket_migration.md  dealer_websocket_migration_historial.md  go_librespot_ws_handshake_debug.md  host_tests.md  spotify_component_analysis.md
extras/cli/: CMakeLists.txt  CliPlayer.cpp  CliPlayer.h  CommandLineArguments.cpp  CommandLineArguments.h  README.md  main.cpp
include/: ApResolve.h  CDNAudioFile.h  CSpotContext.h  ContextResolver.h  DealerClient.h  DealerSession.h  HttpRetry.h  Login5Client.h  LoudnessNormalisation.h  MercurySession.h  PlaybackEvent.h  PlayerCommandHandler.h  PlayerEngine.h  PutStateClient.h  Session.h  SpotifyConnectReceiver.h  TrackLoader.h  TrackPlayer.h  TrackQueue.h  TrackReference.h  VorbisTrackDecoder.h
main/: CMakeLists.txt
main/include/: AuthInfo.h  Authenticator.h  ConnectStateHandler.h  ContextTrackResolver.h  FileProvider.h  LoginBlob.h  Session.h  SessionContext.h  TrackQueue.h  TrackQueueHandler.h  Utils.h
main/include/api/: ApClient.h  ApConnection.h  CredentialsResolver.h  DealerClient.h  SpClient.h
main/include/audio/: CDNDataStream.h  EncryptedAudioStream.h  VorbisAudioStream.h
main/include/crypto/: Base62.h  DiffieHellman.h  Shannon.h
main/include/events/: EventLoop.h  EventModels.h
main/include/proto/: AuthenticationPb.h  ClientTokenPb.h  ConnectPb.h  ExtendedMetadataPb.h  KeyexchangePb.h  Login5Pb.h  MetadataPb.h  NanoPBHelper.h  SpotifyId.h
main/include/tracks/: AudioDecoder.h  ContextPageParser.h  StreamPlayer.h  TrackQueueHandler.h
main/src/: Authenticator.cpp  ConnectStateHandler.cpp  ContextTrackResolver.cpp  CredentialsResolver.cpp  FileProvider.cpp  LoginBlob.cpp  NanoPBExtensions.cpp  Session.cpp  TrackQueue.cpp  TrackQueueHandler.cpp
main/src/api/: ApClient.cpp  ApConnection.cpp  CredentialsResolver.cpp  DealerClient.cpp  SpClient.cpp
main/src/audio/: AudioDecoderImpl.cpp  CDNDataStream.cpp  EncryptedAudioStream.cpp  VorbisAudioStream.cpp
main/src/crypto/: Base62.cpp  DiffieHellman.cpp  Shannon.cpp
main/src/events/: EventLoop.cpp
main/src/proto/: NanoPBHelper.cpp  SpotifyId.cpp
main/src/tracks/: ContextPageParser.cpp  StreamPlayer.cpp  TrackDecoder.cpp  TrackQueueHandler.cpp
protobuf/: authentication.proto  clienttoken.proto  connectivity.proto  extended_metadata.proto  keyexchange.proto  login5.proto  metadata.proto
scripts/: setup-submodules.sh
src/: AccessKeyFetcher.cpp  ApResolve.cpp  CDNAudioFile.cpp  ContextResolver.cpp  DealerClient.cpp  DealerSession.cpp  Login5Client.cpp  LoginBlob.cpp  MercurySession.cpp  Mp3TrackDecoder.cpp  PlainConnection.cpp  PlaybackController.cpp  PlayerCommandHandler.cpp  PlayerEngine.cpp  PutStateClient.cpp  Session.cpp  SpotifyConnectReceiver.cpp  TrackLoader.cpp  TrackPlayer.cpp  TrackQueue.cpp
targets/cli/: CMakeLists.txt  main.cpp
targets/esp32/: .gitignore  CMakeLists.txt  README.md  sdkconfig.defaults
targets/esp32/main/: AudioSinkI2S.cpp  AudioSinkI2S.h  CMakeLists.txt  Kconfig.projbuild  main.cpp
test/: ApResolveTest.cpp  CMakeLists.txt  CredentialsResolverTest.cpp  StreamPlayerTest.cpp  TrackQueueHandlerTest.cpp  main.cpp
test/mocks/: MockAudioDecoder.h  MockFileProvider.h  MockHTTPTransport.h
